Fix #3
By moving away from FS2 and using raw atomicreferences. This should also
hopefully speed up code